[gd_scene load_steps=4 format=2]

[ext_resource path="res://Rooms/document/drzwi urzÄ…d.png" type="Texture" id=1]
[ext_resource path="res://Rooms/hospital/door_hos.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 64.6903

[node name="Node2D" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.572549, 0.572549, 0.572549, 1 )
position = Vector2( -27.2743, -40.7659 )
scale = Vector2( 0.167496, 0.167496 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0.280575, -16.5564 )
polygon = PoolVector2Array( -13.4935, 6.32315, -22.5839, 10.0519, -49.556, 24.7079, -50.2631, -48.8311, -13.8471, -65.8017 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -35.0769, -28.3421 )
shape = SubResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
